pkl-core/src/test/files/LanguageSnippetTests/input/errors/functionNotFoundMaybeLambda.pkl
listing = (it) -> it
call = listing(10)
